fix color pick alignment

--- a/app/css/LeftSideBar.css
+++ b/app/css/LeftSideBar.css
@@ -27,3 +27,11 @@
     flex: 1;
   }
 }
+
+
+.sideBarCustom{
+  /* background-color:red; */
+  div{
+    direction: ltr;
+  }
+}
